added header/footer templates

--- a/locations/templates/locations/index.html
+++ b/locations/templates/locations/index.html
@@ -1,3 +1,4 @@
+{% include "locations/header.html" %}
 {% load location_functions %}
 {% if user_list %}
     <table>
@@ -28,3 +29,4 @@
     <p>No users</p>
 {% endif %}
 
+{% include "locations/footer.html" %}
