added comments and finished the login page

--- a/locations/templates/locations/header.html
+++ b/locations/templates/locations/header.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/stupidtable/0.0.1/stupidtable.min.js"></script>
+	
+</head>
 <body>
 
 
